[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chargingpilot"
version = "0.1.0"
description = "Road-map-aware EV charging simulation, routing, and PPO training"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pandas",
  "gymnasium",
  "torch",
  "PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
